@@ -3,8 +3,12 @@ Version 8.4
 
 Changes in detail
 -----------------
-Added Trace						function 
+Added ::Trace					global function
+CDockContainer::GetToolBarData	member function
+Added CFrame::GetMenuMetrics	member function
+Added CFrame::GetToolBarData	member function
 Added CTab::GetMaxTabSize		member function
+
 Modified TRACE 					now implemented as a macro.
 
 
